# anchore-scout-trivy

./: README.md  pyproject.toml
.github/workflows/: dynamic_sbom_sca_anchore.yml  dynamic_sbom_sca_scout.yml  dynamic_sbom_sca_trivy.yml  publish.yml
anchore_scout_trivy/: __init__.py
